@@ -1,3 +1,7 @@
+2014-03-05  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* mml.el (mml-insert-mime-headers): Allow `recipient-filename'.
+
 2014-02-23  David Engster  <deng@randomsample.de>
 
 	* auth-source.el (auth-source-netrc-saver): Do not depend on `cl-lib'
